--- a/styles/main.css
+++ b/styles/main.css
@@ -22,8 +22,19 @@ li {
 section {
     margin-top: 20;
     margin-bottom: 20px;
+    padding: 10px;
     width: 400px;
-    border: 1px solid black;
+    border: 2px solid rgb(17, 3, 3);
+    border-radius: 10px;
+    width: 500px;
+}
+
+#randomQuote {
+    padding-top: 10px;
+}
+
+#death-counter {
+    align-self: center;
 }
 
 #todo-list-container {
